Accessibility / SEO improvements

--- a/src/pages/my-work/kyesmith.me.mdx
+++ b/src/pages/my-work/kyesmith.me.mdx
@@ -1,8 +1,18 @@
-import { CodeSlash } from '@styled-icons/bootstrap'
+---
+title: KyeSmith.me
+description: Kye Smith's web dev portfolio site
+keywords: gatsby,mdx,portfolio, web developer
+---
+
+import { CodeSlash } from '@styled-icons/bootstrap';
 
 ## This very website
 
-<p><a href="https://github.com/SmithKy3/Kyesmith.me" target="_blank">Repo / code here <CodeSlash /></a></p>
+<p>
+  <a href="https://github.com/SmithKy3/Kyesmith.me" target="_blank">
+    Repo / code here <CodeSlash />
+  </a>
+</p>
 
 Welcome to KyeSmith.me V3.
 
@@ -11,17 +21,17 @@ that I wrote during my second year at university with the help of Codecademy. It
 completely unresponsive and generally lacking in anything "exciting". BUT I had built it and it
 was up on the web and, to be fair, it was blazing fast. If I had any idea about SEO at the time, I
 likely could have gotten a great page ranking.
- 
+
 ---
- 
+
 A few years later, I left Sheffield University and decided this was the most enjoyable area of my learning I’d had
 while studying and it was completely outside of my course's scope, fantastic! Luckily, I had Codecademy to lean
 on again and landed a graduate position as a JS dev with Wren Kitchens. After a while there being introduced to
 TypeScript and React, I decided to branch out in my own time and wrote V2 in Vue.js, using Nuxt to generate a static
 bundle. It was better, marginally.
- 
+
 ---
- 
+
 Now we're here and I've decided I like React much more than Vue. So, this current version is built using Gatsby,
 styled-components, SCSS and MDX. It's a nice stack for static site generation although I'm sure the MDX would become
 a bit cumbersome for anything much more than a blog. You can view the source code using the link at the top of the page
