--- a/src/pages/my-work/space-thing.mdx
+++ b/src/pages/my-work/space-thing.mdx
@@ -1,11 +1,26 @@
+---
+title: Space-Thing
+description: A space simulator by Kye Smith
+keywords: react,next,space
+---
+
 import { CodeSlash, Play } from '@styled-icons/bootstrap';
 
 ## Space-thing
+
 #### (i know... very inventive naming)
 
-<p><a href="https://github.com/SmithKy3/space-thing" target="_blank">Repo / code here <CodeSlash /></a></p>
+<p>
+  <a href="https://github.com/SmithKy3/space-thing" target="_blank">
+    Repo / code here <CodeSlash />
+  </a>
+</p>
 
-<p><a href="https://space-thing.now.sh" target="_blank">Demo here <Play /></a></p>
+<p>
+  <a href="https://space-thing.now.sh" target="_blank">
+    Demo here <Play />
+  </a>
+</p>
 
 This little project began as a fun exercise in strengthening my vector algebra knowledge during the great
 lockdown 1.0 of 2020. The original idea was to create a small universe sandbox of sorts that randomly generates
