--- a/src/pages/my-work/eee-logo.mdx
+++ b/src/pages/my-work/eee-logo.mdx
@@ -1,6 +1,13 @@
+---
+title: UoS EEE Society Logo
+description: Sheffield University's new EEE society logo
+keywords: sheffield,eee,photoshop
+---
+
 import { EasyImage } from '@components/EasyImage';
 
 ## University of Sheffield's Electronic and Electrical Engineering Society Logo
+
 #### what a mouthful
 
 In my final year of University, my course's society decided to host a competition
@@ -12,7 +19,15 @@ date.
 ---
 
 My original design:
-<EasyImage imgFileName="eee-logo.png" style={{ width: '80%', margin: '.5rem auto' }} />
+
+<EasyImage
+  imgFileName="eee-logo.png"
+  style={{ width: '80%', margin: '.5rem auto' }}
+/>
 
 The final design after working with the University design team
-<EasyImage imgFileName="eee-logo-final.png" style={{ width: '80%', margin: '.5rem auto' }} />
+
+<EasyImage
+  imgFileName="eee-logo-final.png"
+  style={{ width: '80%', margin: '.5rem auto' }}
+/>
