Fix inconsistent font on one line of warpspeed post
Seems MDX isn't wrapping lines that include a link with a P
element. So they lack styling. How annoying...

--- a/src/pages/my-work/warp-speed.mdx
+++ b/src/pages/my-work/warp-speed.mdx
@@ -29,8 +29,10 @@ import { WarpSpeedCanvas } from '@components/WarpSpeedCanvas';
 This is an NPM package I wrote during the first COVID-19 lockdown in 2020 and it served two purposes;
 introduce me to publishing to NPM and to provide me with a break from my
 
-<a href="/my-work/space-thing">space-thing</a> project that I was also building out
-at the time.
+<p>
+  <a href="/my-work/space-thing">space-thing</a> project that I was also
+  building out at the time.
+</p>
 
 I was working through a lot of Vector algebra with HTML5 canvas animations and was figuring out
 how best to give the feel of depth on a screen / web page. I decided I could probably remake the star wars
