--- a/src/pages/my-work/kyesmith.me.mdx
+++ b/src/pages/my-work/kyesmith.me.mdx
@@ -1,5 +1,11 @@
-import { MyWorkLayout } from 'components/layouts/MyWork';
+import { MyWorkMeta, MyWorkLayout } from 'components/layouts/MyWork';
 import { CodeSlash } from '@styled-icons/bootstrap';
+
+<MyWorkMeta
+  title="KyeSmith.me - My portfolio site"
+  description="Kye Smith's portfolio site build breakdown"
+  keywords={['developer', 'portfolio', 'Next.JS', 'React', 'Typescript']}
+/>
 
 ## This very website
 
@@ -9,32 +15,39 @@ import { CodeSlash } from '@styled-icons/bootstrap';
   </a>
 </p>
 
-Welcome to KyeSmith.me V3.
+Welcome to KyeSmith.me V3, a place for me to ramble about the things I'm building
+when I'm not building the things that pay the bills (not that they aren't just as
+fun).
 
-Version one was my introduction to web development; a super basic purely HTML and CSS build
-that I wrote during my second year at university with the help of Codecademy. It was awful,
-completely unresponsive and generally lacking in anything "exciting". BUT I had built it and it
-was up on the web and, to be fair, it was blazing fast. If I had any idea about SEO at the time, I
-likely could have gotten a great page ranking.
-
----
-
-A few years later, I left Sheffield University and decided this was the most enjoyable area of my learning I’d had
-while studying and it was completely outside of my course's scope, fantastic! Luckily, I had Codecademy to lean
-on again and landed a graduate position as a JS dev with Wren Kitchens. After a while there being introduced to
-TypeScript and React, I decided to branch out in my own time and wrote V2 in Vue.js, using Nuxt to generate a static
-bundle. It was better, marginally.
+Version one was my introduction to web development. I built it during my second year of
+my undergraduate degree. It was a super basic, purely HTML and CSS, build that I got through
+with the help of Codecademy. It was awful; completely unresponsive and horribly designed.
+BUT I had built it and it was up on the web and, to be fair to myself, it was blazing fast
+and even featured a parallax effect landing page (very fashionable at the time).
+If I had any idea about SEO at the time, I likely could have gotten a great page ranking.
 
 ---
 
-Now we're here and I've decided I like React much more than Vue. So, this current version is built using Gatsby,
-styled-components, SCSS and MDX. It's a nice stack for static site generation although I'm sure the MDX would become
-a bit cumbersome for anything much more than a blog. You can view the source code using the link at the top of the page
-if you're interested. You'll find that I try to write a lot of the components / logic from scratch and this was a conscious
-decision / personal challenge while building this out. I didn't want to lean on libraries for absolutely everything.
-A few good examples of this are; the site-wide dark mode / theme switcher, the carousel on the homepage, the containers
-with the reactive shadows on the homepage (they're much more interactive on a desktop) and also the debounce / throttle
-helper functions. Anyway, thanks for reading, feel free to connect with me on Linkedin, comments / questions are
-always welcome!
+A few years later, I left Sheffield University and decided this little toe-dip into web development
+was what I wanted to pursue and not a career in my degree field of Electronic Engineering.
+I returned to my old friend Codecademy to learn the basics of JavaScript and PHP and started applying
+to graduate schemes. Quite quickly, I landed a graduate JS developer role with Wren Kitchens at their
+head office in Barton.
+The 3 month training scheme there introduced me to TypeScript and React so I decided to branch out in
+my own time and wrote V2 of this portfolio in Vue.js, using Nuxt to generate a static site so I could
+continue using Github pages for hosting.
 
-export default ({ children }) => <MyWorkLayout>{children}</MyWorkLayout>
+---
+
+Now we're here and I've decided I like React much more than Vue. So, this current version is built using Next.JS,
+styled-components, MDX and SASS. I did originally write and publish a version using Gatsby after using it
+for an eCommerce build while working for 5874 commerce but I used Next for a personal project and much preferred it.
+
+You can view the source code using the link at the top of the page if you're interested. You'll find that I try to
+write a lot from scratch and this was a conscious decision / personal challenge while building this out. I didn't
+want to lean on libraries for absolutely everything. A few good examples of this are; the site-wide dark mode / theme
+switcher, the carousel on the homepage, the containers with the reactive shadows on the homepage
+(they're much more interactive on a desktop) and also the debounce / throttle helper functions.
+Anyway, thanks for reading, feel free to connect with me on Linkedin, comments / questions are always welcome!
+
+export default ({ children }) => <MyWorkLayout>{children}</MyWorkLayout>;
